fix: overflow on small sizes

--- a/src/index.scss
+++ b/src/index.scss
@@ -33,6 +33,7 @@
 .container {
   max-width: 1366px;
   margin: 0 auto;
+  overflow-x: hidden;
 }
 
 .subtitle {
